# Open-GL-CPP-software-render

./: CMakeLists.txt  main.cpp
classes and helper functions/: FPSCounter.h  GameBoard.cpp  GameBoard.h  GlfwSetup.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
resources/shaders/: blit.fsh
shaders/: blit.fsh  blit.vsh
src/: main.cpp
src/core/: FPSCounter.cpp  GameBoard.cpp  GameBoard.h  GlfwSetup.cpp
src/core/imgui/: ImguiManager.cpp  ImguiManager.h
